      and w= weeks, d days, h hours m minutes, s seconds, . milliseconds.
      # is a parsing delimitator. If a number is 0, it can be skipped.
      Example : #1w#3h#55m#2s = 1 week , 0 days, 3 hours, 55 minutes 2 seconds and 0 millis.
           * updated TimeOnline in the new specifier;
           * fixed that users cannot have a CID nick;
           * made nickprotected ok, and by default any reg user has its nick protected ( reg advantage);
           * also made about command as available by default for new regs.
           * account flyable is now available !
Account flyable means that : if account has a password set, the last nick used will be possible to be used to 
log in to account, if password is ok. Then, the CID of the new client is being memorized for the account. 
To be flyable, the nick must NOT be protected, so when you check flyable, its being auto deactivated.
           * added a help panel on GUI commands which describes all commands;
           * fixed one bad show up when granting mass command;
           * added class comment on each class;
           * generated a javadoc for DSHub.
           * created basic command spam for CTM and INF;
           * moved login commands to STA instead of MSG ( to avoid state early transition)
           * fixed adc adv config panel for INF ( forgot about it :D)
           * created remembering system for old INF's... to be sent every 2 mins interval;
           * modified ctm spamming a bit;
           * TAG: ETA;
           * changed to Theta;
           * added the DS logo to main page :)
           * added a forbidden words panel ( chat control ) ( thansk to naccio );
           * naccio is now DSHub dev
           * fixed bug when registering a CID who was not used before, nobody could connect;
           * fixed bug when hidden, message " you are hidden " was sent twice;
           * rearranged boxes in adc adv panel using absolute layout;